--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,22 @@
 # eclipse
+# !/eclipse/.metadata/.plugins/org.eclipse.core.runtime/.settings/**/*
 bin
 *.launch
-.settings
-.metadata
-.classpath
+#.settings
+# eclipse/
+#!eclipse/.metadata/.lock
+# .classpath
 # .project
 **/*.log
+
+eclipse/.metadata/.plugins/org.eclipse.ltk.core.refactoring/
+eclipse/.metadata/.plugins/org.eclipse.m2e.logback.configuration/
+eclipse/.metadata/.mylyn/
+eclipse/.metadata/version.ini
+**/.history/*
+**/.indexes/*
+**/*.index
+eclipse/**/*.png
 
 # idea
 out
