--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>forge-1.12.2-14.23.5.2838-mdk</name>
+	<name>minercraft</name>
 	<comment></comment>
 	<projects/>
 	<natures>
